--- a/main/templates/pages/voting_results.html
+++ b/main/templates/pages/voting_results.html
@@ -6,15 +6,26 @@
 
 {% block extra_info %}
   <hr />
-  <div style="width: 50%" class="mx-auto mb-3">
-    <ul class="list-group">
-      {% for key, value in facts.items %}
-        <li class="fs-4 card-text list-group-item">{{ key }} - {{ value }}</li>
-      {% endfor %}
-    </ul>
+  <div style="width: 85%" class="mx-auto mt-3 mb-3">
+    <table class="table table-bordered text-break fs-5">
+      <thead>
+        <tr>
+          <th class="align-middle col-2">Вариант ответа</th>
+          <th class="align-middle col-1">Количество голосов</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for key, value in facts.items %}
+          <tr>
+            <td>{{key}}</td>
+            <td>{{value}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
   {% if plotly %}
-    <hr class="mt-0"/>
+    <hr class="mb-0 mt-0"/>
   {% endif %}
   {{ plotly|safe }}
 {% endblock %}
