Поменял цвета на графиках

--- a/main/templates/pages/voting_results.html
+++ b/main/templates/pages/voting_results.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block extra_info %}
-  <hr />
+  <hr class="mt-0"/>
   <div style="width: 85%" class="mx-auto mt-3 mb-3">
     <table class="table table-bordered text-break fs-5">
       <thead>
