--- a/main/templates/pages/voting_results.html
+++ b/main/templates/pages/voting_results.html
@@ -7,17 +7,17 @@
 {% block extra_info %}
   <hr class="mt-0"/>
   <div style="width: 85%" class="mx-auto mt-3 mb-3">
-    <table class="table table-bordered text-break fs-5">
+    <table class="table table-bordered fs-5">
       <thead>
-        <tr>
-          <th class="align-middle col-2">Вариант ответа</th>
-          <th class="align-middle col-1">Количество голосов</th>
+        <tr class="align-middle">
+          <th class="col-3">Вариант ответа</th>
+          <th class="col-1">Количество голосов</th>
         </tr>
       </thead>
       <tbody>
         {% for key, value in facts.items %}
-          <tr>
-            <td>{{key}}</td>
+          <tr class="align-middle">
+            <td class="text-break">{{key}}</td>
             <td>{{value}}</td>
           </tr>
         {% endfor %}
